master - Added sync methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,4 +35,5 @@ scheduler.quartz.db.override-on-startup=false
 # = CURRENCY
 # ===============================
 currency.list.url=https://api.coinmarketcap.com/v1/ticker/?limit=10000
+history.data.url=https://graphs.coinmarketcap.com/currencies/
 server.port=9090
