--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     //  -------------------------------------------------------------------------------------------------
     runtime('org.postgresql:postgresql')
     //  -------------------------------------------------------------------------------------------------
-    compileOnly('org.projectlombok:lombok')
+    compile('org.projectlombok:lombok')
     //  -------------------------------------------------------------------------------------------------
     testCompile('org.junit.platform:junit-platform-runner:1.0.0-M4')
     testCompile('org.testng:testng:6.10')
