--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'org.springframework.boot'
 group = 'com.crypto.deep'
 version = '0.0.1-SNAPSHOT'
 
-sourceCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_1_9
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -42,6 +42,7 @@ dependencies {
     compile('com.fasterxml.jackson.core:jackson-core')
     compile('com.fasterxml.jackson.core:jackson-databind')
     compile('com.fasterxml.jackson.core:jackson-annotations')
+    compile('com.fasterxml.jackson.dataformat:jackson-dataformat-csv')
     //  -------------------------------------------------------------------------------------------------
     compile('org.quartz-scheduler:quartz:2.2.1')
     compile('com.mashape.unirest:unirest-java:1.4.9')
