master - added basic architecture for writing into CSV

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,4 @@ scheduler.quartz.db.override-on-startup=false
 currency.list.url=https://api.coinmarketcap.com/v1/ticker/?limit=10000
 history.data.url=https://graphs.coinmarketcap.com/currencies/
 server.port=9090
+path.to.trades=classpath:trades
