--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ repositories {
 
 
 dependencies {
+    implementation 'one.util:streamex:0.6.6'
+
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-web')
     //  -------------------------------------------------------------------------------------------------
